refactor: 更新 EndToEndIntegrationTest 和 WebSocketIntegrationTest，统一 HTTP 请求端口配置，增强测试稳定性；在 Engine 类中添加客户端 Location URI 与服务器端 Channel ID 的映射管理，优化消息回传逻辑；更新 SimpleEchoExtension 以支持新的消息属性，提升代码可读性和可维护性。